<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brief Caculator</string>
    <string name="menu_settings">Settings</string>
    <string name="xiaomou_caculator">Xiaomous Caculator</string>
    <string name="input_hint">Please enter the number</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="ope_MR">MR</string>
    <string name="ope_MC">MC</string>
    <string name="ope_Back">C</string>
    <string name="dot">.</string>
    <string name="Multi">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="pos_neg">+/-</string>
    <string name="equal">=</string>
    <string name="ABOUT">ABOUT</string>
    <string name="QUIT">QUIT</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">About</string>
    <string name="about">Author: Xiaomou Wang Jan 2013</string>

</resources>